--- a/blog.html
+++ b/blog.html
@@ -9,26 +9,25 @@
 <html lang="ru">
 <!--<![endif]-->
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>Cinemalist</title>
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="author" content="" />
+    <meta name="description" content=""/>
+    <meta name="keywords" content=""/>
+    <meta name="author" content=""/>
     <meta name="copyright" content="(c)">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="format-detection" content="address=no" />
-    <meta name="HandheldFriendly" content="True" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="format-detection" content="telephone=no"/>
+    <meta name="format-detection" content="address=no"/>
+    <meta name="HandheldFriendly" content="True"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="shortcut icon" href="" type="image/x-icon">
     <!-- <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link href="favicon.ico" rel="icon" type="image/vnd.microsoft.icon"> -->
-    <link rel="stylesheet" href="components/custom-tooltips/tipso.min.css" />
-    <link rel="stylesheet" href="components/custom-select/chosen.css" />
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="components/custom-tooltips/tipso.min.css"/>
+    <link rel="stylesheet" href="components/custom-select/chosen.css"/>
+    <link rel="stylesheet" href="assets/css/styles.css"/>
 </head>
 <body>
 <div class="global_wrapper">
@@ -290,96 +289,100 @@
                             </div>
                         </div>
                         <div class="tabs__body-item">
+                            <div class="blog__list">
 
-                            <figure class="blog__item">
-                                <a href="#" class="blog__link">
-                                    <div class="blog__picture">
-                                        <img src="http://placehold.it/430x260" alt="">
+                                <figure class="blog__item">
+                                    <a href="#" class="blog__link">
+                                        <div class="blog__picture">
+                                            <img src="http://placehold.it/430x260" alt="">
 
-                                        <span class="blog__date">30.09.2016</span>
-                                    </div>
-                                    <div class="blog__info">
-                                        <span class="blog__author">Джон Леннон</span>
-                                        <div class="blog__title">
-                                            <p>Книга «Мистер Робот: Красная тачка» поможет разгадать секреты
-                                                сериала</p>
+                                            <span class="blog__date">30.09.2016</span>
                                         </div>
-                                        <div class="blog__text">
-                                            <p>В последней серии второго сезона сериала «Мистер Робот»
-                                                упоминалось название
-                                                стихотворения Уильяма Карлоса Уильямса «Красная тачка» (Red
-                                                Wheelbarrow)</p>
-                                        </div>
-                                        <div class="blog__bottom">
-                                            <div class="blog__views"><i
-                                                    class="icon icon--views"></i><span>8</span></div>
-                                            <div class="blog__comments"><i
-                                                    class="icon icon--comments"></i><span>0</span>
+                                        <div class="blog__info">
+                                            <span class="blog__author">Джон Леннон</span>
+                                            <div class="blog__title">
+                                                <p>Книга «Мистер Робот: Красная тачка» поможет разгадать секреты
+                                                    сериала</p>
+                                            </div>
+                                            <div class="blog__text">
+                                                <p>В последней серии второго сезона сериала «Мистер Робот»
+                                                    упоминалось название
+                                                    стихотворения Уильяма Карлоса Уильямса «Красная тачка» (Red
+                                                    Wheelbarrow)</p>
+                                            </div>
+                                            <div class="blog__bottom">
+                                                <div class="blog__views"><i
+                                                        class="icon icon--views"></i><span>8</span></div>
+                                                <div class="blog__comments"><i
+                                                        class="icon icon--comments"></i><span>0</span>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                </a>
-                            </figure>
-                            <figure class="blog__item">
-                                <a href="#" class="blog__link">
-                                    <div class="blog__picture">
-                                        <img src="http://placehold.it/430x260" alt="">
+                                    </a>
+                                </figure>
+                                <figure class="blog__item">
+                                    <a href="#" class="blog__link">
+                                        <div class="blog__picture">
+                                            <img src="http://placehold.it/430x260" alt="">
 
-                                        <span class="blog__date">30.09.2016</span>
-                                    </div>
-                                    <div class="blog__info">
-                                        <span class="blog__author">Джон Леннон</span>
-                                        <div class="blog__title">
-                                            <p>Книга «Мистер Робот: Красная тачка» поможет разгадать секреты
-                                                сериала</p>
+                                            <span class="blog__date">30.09.2016</span>
                                         </div>
-                                        <div class="blog__text">
-                                            <p>В последней серии второго сезона сериала «Мистер Робот»
-                                                упоминалось название
-                                                стихотворения Уильяма Карлоса Уильямса «Красная тачка» (Red
-                                                Wheelbarrow)</p>
-                                        </div>
-                                        <div class="blog__bottom">
-                                            <div class="blog__views"><i
-                                                    class="icon icon--views"></i><span>8</span></div>
-                                            <div class="blog__comments"><i
-                                                    class="icon icon--comments"></i><span>0</span>
+                                        <div class="blog__info">
+                                            <span class="blog__author">Джон Леннон</span>
+                                            <div class="blog__title">
+                                                <p>Книга «Мистер Робот: Красная тачка» поможет разгадать секреты
+                                                    сериала</p>
+                                            </div>
+                                            <div class="blog__text">
+                                                <p>В последней серии второго сезона сериала «Мистер Робот»
+                                                    упоминалось название
+                                                    стихотворения Уильяма Карлоса Уильямса «Красная тачка» (Red
+                                                    Wheelbarrow)</p>
+                                            </div>
+                                            <div class="blog__bottom">
+                                                <div class="blog__views"><i
+                                                        class="icon icon--views"></i><span>8</span></div>
+                                                <div class="blog__comments"><i
+                                                        class="icon icon--comments"></i><span>0</span>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                </a>
-                            </figure>
+                                    </a>
+                                </figure>
+                            </div>
                         </div>
                         <div class="tabs__body-item">
-                            <figure class="blog__item">
-                                <a href="#" class="blog__link">
-                                    <div class="blog__picture">
-                                        <img src="http://placehold.it/430x260" alt="">
+                            <div class="blog__list">
+                                <figure class="blog__item">
+                                    <a href="#" class="blog__link">
+                                        <div class="blog__picture">
+                                            <img src="http://placehold.it/430x260" alt="">
 
-                                        <span class="blog__date">30.09.2016</span>
-                                    </div>
-                                    <div class="blog__info">
-                                        <span class="blog__author">Джон Леннон</span>
-                                        <div class="blog__title">
-                                            <p>Книга «Мистер Робот: Красная тачка» поможет разгадать секреты
-                                                сериала</p>
+                                            <span class="blog__date">30.09.2016</span>
                                         </div>
-                                        <div class="blog__text">
-                                            <p>В последней серии второго сезона сериала «Мистер Робот»
-                                                упоминалось название
-                                                стихотворения Уильяма Карлоса Уильямса «Красная тачка» (Red
-                                                Wheelbarrow)</p>
-                                        </div>
-                                        <div class="blog__bottom">
-                                            <div class="blog__views"><i
-                                                    class="icon icon--views"></i><span>8</span></div>
-                                            <div class="blog__comments"><i
-                                                    class="icon icon--comments"></i><span>0</span>
+                                        <div class="blog__info">
+                                            <span class="blog__author">Джон Леннон</span>
+                                            <div class="blog__title">
+                                                <p>Книга «Мистер Робот: Красная тачка» поможет разгадать секреты
+                                                    сериала</p>
+                                            </div>
+                                            <div class="blog__text">
+                                                <p>В последней серии второго сезона сериала «Мистер Робот»
+                                                    упоминалось название
+                                                    стихотворения Уильяма Карлоса Уильямса «Красная тачка» (Red
+                                                    Wheelbarrow)</p>
+                                            </div>
+                                            <div class="blog__bottom">
+                                                <div class="blog__views"><i
+                                                        class="icon icon--views"></i><span>8</span></div>
+                                                <div class="blog__comments"><i
+                                                        class="icon icon--comments"></i><span>0</span>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                </a>
-                            </figure>
+                                    </a>
+                                </figure>
+                            </div>
                         </div>
                     </div>
                     <!-- End tabs__body -->
