--- a/favorite.html
+++ b/favorite.html
@@ -9,26 +9,25 @@
 <html lang="ru">
 <!--<![endif]-->
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>Cinemalist</title>
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="author" content="" />
+    <meta name="description" content=""/>
+    <meta name="keywords" content=""/>
+    <meta name="author" content=""/>
     <meta name="copyright" content="(c)">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="format-detection" content="address=no" />
-    <meta name="HandheldFriendly" content="True" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="format-detection" content="telephone=no"/>
+    <meta name="format-detection" content="address=no"/>
+    <meta name="HandheldFriendly" content="True"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="shortcut icon" href="" type="image/x-icon">
     <!-- <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link href="favicon.ico" rel="icon" type="image/vnd.microsoft.icon"> -->
-    <link rel="stylesheet" href="components/custom-tooltips/tipso.min.css" />
-    <link rel="stylesheet" href="components/custom-select/chosen.css" />
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="components/custom-tooltips/tipso.min.css"/>
+    <link rel="stylesheet" href="components/custom-select/chosen.css"/>
+    <link rel="stylesheet" href="assets/css/styles.css"/>
 </head>
 <body>
 <div class="global_wrapper">
@@ -94,12 +93,12 @@
                         <li class="favorite__item">
                             <div class="favorite__people">
                                 <div class="favorite__image">
-                                    <img src="images/bgs/user-face1.jpg" alt="">
+                                    <a href="#"><img src="images/bgs/user-face1.jpg" alt=""></a>
                                 </div>
                                 <div class="favorite__info">
                                     <div class="favorite__header">
                                         <div class="favorite__name">
-                                            <span>Екатерина Суливан</span>
+                                            <a href="#">Екатерина Суливан</a>
                                         </div>
                                         <div class="favorite__subinfo">
                                             <p>26 лет
@@ -141,12 +140,12 @@
                         <li class="favorite__item">
                             <div class="favorite__people">
                                 <div class="favorite__image">
-                                    <img src="images/bgs/user-face2.jpg" alt="">
+                                    <a href="#"><img src="images/bgs/user-face2.jpg" alt=""></a>
                                 </div>
                                 <div class="favorite__info">
                                     <div class="favorite__header">
                                         <div class="favorite__name">
-                                            <span>Екатерина Суливан</span>
+                                            <a href="#">Екатерина Суливан</a>
                                         </div>
                                         <div class="favorite__subinfo">
                                             <p>26 лет
@@ -185,12 +184,12 @@
                         <li class="favorite__item">
                             <div class="favorite__people">
                                 <div class="favorite__image">
-                                    <img src="images/bgs/user-face3.jpg" alt="">
+                                    <a href="#"><img src="images/bgs/user-face3.jpg" alt=""></a>
                                 </div>
                                 <div class="favorite__info">
                                     <div class="favorite__header">
                                         <div class="favorite__name">
-                                            <span>Екатерина Суливан</span>
+                                            <a href="#">Екатерина Суливан</a>
                                         </div>
                                         <div class="favorite__subinfo">
                                             <p>26 лет
@@ -229,12 +228,12 @@
                         <li class="favorite__item">
                             <div class="favorite__people">
                                 <div class="favorite__image">
-                                    <img src="images/bgs/user-face4.jpg" alt="">
+                                    <a href="#"><img src="images/bgs/user-face4.jpg" alt=""></a>
                                 </div>
                                 <div class="favorite__info">
                                     <div class="favorite__header">
                                         <div class="favorite__name">
-                                            <span>Екатерина Суливан</span>
+                                            <a href="#">Екатерина Суливан</a>
                                         </div>
                                         <div class="favorite__subinfo">
                                             <p>26 лет
@@ -275,12 +274,12 @@
                         <li class="favorite__item">
                             <div class="favorite__people">
                                 <div class="favorite__image">
-                                    <img src="images/bgs/user-face1.jpg" alt="">
+                                    <a href="#"><img src="images/bgs/user-face1.jpg" alt=""></a>
                                 </div>
                                 <div class="favorite__info">
                                     <div class="favorite__header">
                                         <div class="favorite__name">
-                                            <span>Екатерина Суливан</span>
+                                            <a href="#">Екатерина Суливан</a>
                                         </div>
                                         <div class="favorite__subinfo">
                                             <p>26 лет
