--- a/index.html
+++ b/index.html
@@ -246,7 +246,9 @@
                     <li class="people-preview__item"><a href="#" class="people-preview__link"><img
                             src="images/ic/profile-face-40.png" alt=""></a></li>
                 </ul>
-                <a href="#" class="people-preview__square"></a>
+                <a href="#" class="people-preview__square">
+                    <span>Cinemalist</span>
+                </a>
             </div>
             <!-- End people-preview -->
 
