--- a/people.html
+++ b/people.html
@@ -571,6 +571,21 @@
                     </div>
                 </div>
                 <!-- END views ヽ(•‿•)ノ -->
+                <!-- BEGIN pagination -->
+                <section class="pagination">
+                    <ul class="pagination-list">
+                        <li class="pagination__item is-active">
+                            <a href="#" class="pagination__link">1</a>
+                        </li>
+                        <li class="pagination__item">
+                            <a href="#" class="pagination__link">2</a>
+                        </li>
+                        <li class="pagination__item">
+                            <a href="#" class="pagination__link">3</a>
+                        </li>
+                    </ul>
+                </section>
+                <!-- END pagination ヽ(•‿•)ノ -->
             </div>
             <!-- END padding-box ヽ(•‿•)ノ -->
 
