--- a/blog-single.html
+++ b/blog-single.html
@@ -535,7 +535,7 @@
                                 <input type="text" placeholder="Ключевое слово">
                             </div>
                             <div class="input-group">
-                                <select class="custom-it">
+                                <select class="custom-it search-field">
                                     <option value="Выберите цех" disabled selected>Выберите цех</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
@@ -543,7 +543,7 @@
                                 </select>
                             </div>
                             <div class="input-group">
-                                <select class="custom-it">
+                                <select class="custom-it search-field">
                                     <option value="Выберите цех" disabled selected>Выберите цех</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
@@ -551,7 +551,7 @@
                                 </select>
                             </div>
                             <div class="input-group">
-                                <select class="custom-it">
+                                <select class="custom-it search-field">
                                     <option value="Выберите цех" disabled selected>Выберите город</option>
                                     <option value="Санкт-Питербург">Санкт-Питербург</option>
                                     <option value="Москва">Москва</option>
@@ -576,10 +576,6 @@
                                         <label class="checkbox-wrap">
                                             <input type="checkbox" value="some-value">
                                             <span class="checkbox-square">Занят</span>
-                                        </label>
-                                        <label class="checkbox-wrap">
-                                            <input type="checkbox" value="some-value">
-                                            <span class="checkbox-square">Не определён</span>
                                         </label>
                                     </div>
                                     <!-- End checkbox-group -->
