--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                                 <input type="text" placeholder="Ключевое слово">
                             </div>
                             <div class="input-group">
-                                <select class="custom-it">
+                                <select class="custom-it search-field">
                                     <option value="Выберите цех" disabled selected>Выберите цех</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
@@ -488,7 +488,7 @@
                                 </select>
                             </div>
                             <div class="input-group">
-                                <select class="custom-it">
+                                <select class="custom-it search-field">
                                     <option value="Выберите цех" disabled selected>Выберите цех</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
@@ -496,7 +496,7 @@
                                 </select>
                             </div>
                             <div class="input-group">
-                                <select class="custom-it">
+                                <select class="custom-it search-field">
                                     <option value="Выберите цех" disabled selected>Выберите город</option>
                                     <option value="Санкт-Питербург">Санкт-Питербург</option>
                                     <option value="Москва">Москва</option>
@@ -521,10 +521,6 @@
                                         <label class="checkbox-wrap">
                                             <input type="checkbox" value="some-value">
                                             <span class="checkbox-square">Занят</span>
-                                        </label>
-                                        <label class="checkbox-wrap">
-                                            <input type="checkbox" value="some-value">
-                                            <span class="checkbox-square">Не определён</span>
                                         </label>
                                     </div>
                                     <!-- End checkbox-group -->
