--- a/people.html
+++ b/people.html
@@ -809,7 +809,7 @@
                                 <input type="text" placeholder="Ключевое слово">
                             </div>
                             <div class="input-group">
-                                <select class="custom-it">
+                                <select class="custom-it search-field">
                                     <option value="Выберите цех" disabled selected>Выберите цех</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
@@ -817,7 +817,7 @@
                                 </select>
                             </div>
                             <div class="input-group">
-                                <select class="custom-it">
+                                <select class="custom-it search-field">
                                     <option value="Выберите цех" disabled selected>Выберите цех</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
@@ -825,12 +825,13 @@
                                 </select>
                             </div>
                             <div class="input-group">
-                                <select class="custom-it">
+                                <select class="custom-it search-field">
                                     <option value="Выберите цех" disabled selected>Выберите город</option>
                                     <option value="Санкт-Питербург">Санкт-Питербург</option>
                                     <option value="Москва">Москва</option>
                                     <option value="Екатеренбург">Екатеренбург</option>
                                 </select>
+                            </div>
                             </div>
                             <!-- Begin additional-group -->
                             <div class="additional-group">
@@ -850,10 +851,6 @@
                                         <label class="checkbox-wrap">
                                             <input type="checkbox" value="some-value">
                                             <span class="checkbox-square">Занят</span>
-                                        </label>
-                                        <label class="checkbox-wrap">
-                                            <input type="checkbox" value="some-value">
-                                            <span class="checkbox-square">Не определён</span>
                                         </label>
                                     </div>
                                     <!-- End checkbox-group -->
