--- a/profile-edit.html
+++ b/profile-edit.html
@@ -398,10 +398,6 @@
                                                         <input type="radio" name="some-value-radio1">
                                                         <span class="checkbox-square">Занят</span>
                                                     </label>
-                                                    <label class="checkbox-wrap">
-                                                        <input type="radio" name="some-value-radio1">
-                                                        <span class="checkbox-square">Не определён</span>
-                                                    </label>
                                                 </div>
                                             </div>
                                             <div class="input-group">
@@ -418,10 +414,6 @@
                                                     <label class="checkbox-wrap">
                                                         <input type="radio" name="some-value-radio2">
                                                         <span class="checkbox-square">Занят</span>
-                                                    </label>
-                                                    <label class="checkbox-wrap">
-                                                        <input type="radio" name="some-value-radio2">
-                                                        <span class="checkbox-square">Не определён</span>
                                                     </label>
                                                 </div>
                                             </div>
@@ -868,7 +860,7 @@
                                 <input type="text" placeholder="Ключевое слово">
                             </div>
                             <div class="input-group">
-                                <select class="custom-it">
+                                <select class="custom-it search-field">
                                     <option value="Выберите цех" disabled selected>Выберите цех</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
@@ -876,7 +868,7 @@
                                 </select>
                             </div>
                             <div class="input-group">
-                                <select class="custom-it">
+                                <select class="custom-it search-field">
                                     <option value="Выберите цех" disabled selected>Выберите цех</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
@@ -884,7 +876,7 @@
                                 </select>
                             </div>
                             <div class="input-group">
-                                <select class="custom-it">
+                                <select class="custom-it search-field">
                                     <option value="Выберите цех" disabled selected>Выберите город</option>
                                     <option value="Санкт-Питербург">Санкт-Питербург</option>
                                     <option value="Москва">Москва</option>
@@ -909,10 +901,6 @@
                                         <label class="checkbox-wrap">
                                             <input type="checkbox" value="some-value">
                                             <span class="checkbox-square">Занят</span>
-                                        </label>
-                                        <label class="checkbox-wrap">
-                                            <input type="checkbox" value="some-value">
-                                            <span class="checkbox-square">Не определён</span>
                                         </label>
                                     </div>
                                     <!-- End checkbox-group -->
