--- a/profile-edit.html
+++ b/profile-edit.html
@@ -860,24 +860,24 @@
                                 <input type="text" placeholder="Ключевое слово">
                             </div>
                             <div class="input-group">
-                                <select class="custom-it search-field">
-                                    <option value="Выберите цех" disabled selected>Выберите цех</option>
+                                <select class="custom-it search-field first-option-selected">
+                                    <option value="Выберите цех" selected>Выберите цех</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
                                 </select>
                             </div>
                             <div class="input-group">
-                                <select class="custom-it search-field">
-                                    <option value="Выберите цех" disabled selected>Выберите цех</option>
+                                <select class="custom-it search-field first-option-selected">
+                                    <option value="Выберите цех" selected>Выберите цех</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
                                 </select>
                             </div>
                             <div class="input-group">
-                                <select class="custom-it search-field">
-                                    <option value="Выберите цех" disabled selected>Выберите город</option>
+                                <select class="custom-it search-field first-option-selected">
+                                    <option value="Выберите цех" selected>Выберите город</option>
                                     <option value="Санкт-Питербург">Санкт-Питербург</option>
                                     <option value="Москва">Москва</option>
                                     <option value="Екатеренбург">Екатеренбург</option>
