--- a/profile-notification.html
+++ b/profile-notification.html
@@ -27,6 +27,7 @@
     <link href="favicon.ico" rel="icon" type="image/vnd.microsoft.icon"> -->
     <link rel="stylesheet" href="components/custom-tooltips/tipso.min.css"/>
     <link rel="stylesheet" href="components/custom-select/chosen.css"/>
+    <link rel="stylesheet" href="components/popupbox/source/jquery.fancybox.css"/>
     <link rel="stylesheet" href="assets/css/styles.css"/>
 
     <script type="text/javascript">
@@ -60,7 +61,7 @@
         <div class="container-fluid">
             <!-- Begin header__logo -->
             <div class="header__logo">
-                <a href="#" class="cinemalist-logotype">Cinemailist</a>
+                <a href="#" class="cinemalist-logotype">Cinemalist</a>
             </div>
             <!-- End header__logo -->
             <nav class="header__nav">
@@ -465,7 +466,7 @@
                                         </g>
                                     </svg>
                                 </div>
-                                <span class="action__value">Моё избранное</span>
+                                <span class="action__value">Мои уведомления</span>
         
                                 <!-- Begin notification-value -->
                                 <div class="notification-value js-little-popup">
@@ -528,7 +529,7 @@
                             </div>
                             <div class="input-group">
                                 <select class="custom-it search-field first-option-selected">
-                                    <option value="Выберите цех" selected>Выберите цех</option>
+                                    <option value="Выберите специализацию" selected>Выберите специализацию</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
@@ -635,7 +636,7 @@
                                     </div>
                                     <!-- End checkbox-group -->
                                 </div>
-                                <a href="#" class="js-extended-search simple-link">Рассширенный поиск</a>
+                                <a href="#" class="js-extended-search simple-link">Расширенный поиск</a>
                             </div>
                             <!-- End additional-group -->
                             <input type="submit" class="button button--transparent-yellow" value="Искать">
@@ -733,6 +734,7 @@
 <script src="components/custom-tooltips/tipso.min.js" type="text/javascript"></script>
 <script src="components/grayscale/jquery.gray.min.js" type="text/javascript"></script>
 <script src="components/grayscale/blur.js" type="text/javascript"></script>
+<script src="components/popupbox/source/jquery.fancybox.js" type="text/javascript"></script>
 <script src="components/swipe-lib/jquery.touchSwipe.min.js" type="text/javascript"></script>
 <script src="assets/js/common.js" type="text/javascript"></script>
 </body>
