#FIX language selects

--- a/profile-edit.html
+++ b/profile-edit.html
@@ -762,6 +762,10 @@
                                                     <option value="начинающий">начинающий</option>
                                                     <option value="нативный">нативный</option>
                                                 </select>
+
+                                                <!-- BEGIN language-input -->
+                                                <input type="hidden" id="language-selects">
+                                                <!-- END  ヽ(•‿•)ノ -->
                                             </div>
 
                                             <div class="input-group">
